[workspace]

members = [
    "aoc2019_utils",
    "aoc2019_day01",
    "aoc2019_day02",
    "aoc2019_day03",
    "aoc2019_day04",
    "aoc2019_day05",
    "aoc2019_day06",
    "aoc2019_day07",
    "aoc2019_day08",
    "aoc2019_day09",
    "aoc2019_day10",
    "aoc2019_day11",
    "aoc2019_day12",
    "aoc2019_day13",
    "aoc2019_day14",
    "aoc2019_day15",
    "aoc2019_day16",
    "aoc2019_day17",
    "aoc2019_day18",
    "aoc2019_day19",
    "aoc2019_day20",
    "aoc2019_day21",
    "aoc2019_day22",
]
