[package]
name = "aoc2019_day01"
version = "0.1.0"
authors = ["Brian Lee <brian.lee@gtri.gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2019_day01a"
path = "src/day01a.rs"

[[bin]]
name = "aoc2019_day01b"
path = "src/day01b.rs"

[dependencies]

aoc2019_utils = { path = "../aoc2019_utils" }
