[package]
name = "aoc2019_day03"
version = "0.1.0"
authors = ["Brian Lee <brian.lee@gtri.gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2019_day03a"
path = "src/day03a.rs"

[[bin]]
name = "aoc2019_day03b"
path = "src/day03b.rs"

[dependencies]

aoc2019_utils = { path = "../aoc2019_utils" }
