[package]
name = "aoc2019_day05"
version = "0.1.0"
authors = ["Brian Lee <brian.lee@gtri.gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2019_day05a"
path = "src/day05a.rs"

[[bin]]
name = "aoc2019_day05b"
path = "src/day05b.rs"

[dependencies]

aoc2019_utils = { path = "../aoc2019_utils" }
