[package]
name = "aoc2019_day06"
version = "0.1.0"
authors = ["Brian Lee <brian.lee@gtri.gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2019_day06a"
path = "src/day06a.rs"

[[bin]]
name = "aoc2019_day06b"
path = "src/day06b.rs"

[dependencies]

aoc2019_utils = { path = "../aoc2019_utils" }
