[package]
name = "aoc2019_day07"
version = "0.1.0"
authors = ["Brian Lee <brian.lee@gtri.gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2019_day07a"
path = "src/day07a.rs"

[[bin]]
name = "aoc2019_day07b"
path = "src/day07b.rs"

[dependencies]

aoc2019_utils = { path = "../aoc2019_utils" }
