[package]
name = "aoc2019_day09"
version = "0.1.0"
authors = ["Brian Lee <brian.lee@gtri.gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2019_day09a"
path = "src/day09a.rs"

[[bin]]
name = "aoc2019_day09b"
path = "src/day09b.rs"

[dependencies]

aoc2019_utils = { path = "../aoc2019_utils" }
