[package]
name = "aoc2019_day13"
version = "0.1.0"
authors = ["Brian Lee <jblee123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2019_day13a"
path = "src/day13a.rs"

[[bin]]
name = "aoc2019_day13b"
path = "src/day13b.rs"

[dependencies]

aoc2019_utils = { path = "../aoc2019_utils" }
