[package]
name = "aoc2019_day19"
version = "0.1.0"
authors = ["Brian Lee <jblee123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2019_day19a"
path = "src/day19a.rs"

[[bin]]
name = "aoc2019_day19b"
path = "src/day19b.rs"

[dependencies]

aoc2019_utils = { path = "../aoc2019_utils" }
