[package]
name = "aoc2019_day21"
version = "0.1.0"
authors = ["Brian Lee <jblee123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2019_day21a"
path = "src/day21a.rs"

[[bin]]
name = "aoc2019_day21b"
path = "src/day21b.rs"

[dependencies]

aoc2019_utils = { path = "../aoc2019_utils" }
